--- a/src/stories/button/back-button.scss
+++ b/src/stories/button/back-button.scss
@@ -5,6 +5,7 @@
   border-radius: 100px;
   padding: 0.5rem 1.5rem;
   transition: all 0.5s ease;
+  border: none;
 
   &:hover {
     background-color: rgba($color-red, 0.8);
