--- a/src/stories/button/delete-button.scss
+++ b/src/stories/button/delete-button.scss
@@ -4,6 +4,7 @@
   padding: 5px 0.5rem;
   cursor: pointer;
   transition: all 0.5s ease;
+  border: none;
 
   &:hover {
     background-color: rgba($color-red, 0.8);
