--- a/src/stories/pagination/pagination.scss
+++ b/src/stories/pagination/pagination.scss
@@ -4,7 +4,10 @@
   padding: 0;
 }
 
-
+.selected{
+  border: 1px solid $color-black;
+  border-radius: 0.5rem;
+}
 .page-link {
   display: inline-block;
   padding: 0.5rem;
