--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -8,35 +8,36 @@
   display: flex;
   align-items: center;
   justify-content: center;
-}
+
+  &__content {
+    padding: 2rem;
+    border-radius: 1.2rem;
+    background-color: $color-white;
+    width: 350px;
+    text-align: center;
+  }
 
 
-.modal__content {
-  padding: 2rem;
-  border-radius: 1.2rem;
-  background-color: $color-white;
-  width: 350px;
-  text-align: center;
-}
+  &__input-field {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 2.5rem;
+  }
 
-.modal__input-field {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 2.5rem;
-}
+  &__input {
+    padding: 0.5rem 2rem;
+    border: 2px solid $color-dark-green;
+    border-radius: 1.5rem;
 
-.modal__input {
-  padding: 0.5rem 2rem;
-  border: 2px solid $color-dark-green;
-  border-radius: 1.5rem;
+    &:focus {
+      outline: $color-dark-green;
+    }
+  }
 
-  &:focus {
-    outline: $color-dark-green;
+  &_warning-message {
+    color: $color-red;
+    font-size: 1rem;
   }
 }
 
 
-.modal__warning-message {
-  color: $color-red;
-  font-size: 1rem;
-}
