--- a/src/pages/main/currensyTable.scss
+++ b/src/pages/main/currensyTable.scss
@@ -6,13 +6,6 @@
   align-items: center;
 }
 
-.table__row {
-  margin-bottom: 1rem;
-  transition: all 0.5s ease;
-
-
-}
-
 tbody > .table__row {
   cursor: pointer;
 
@@ -21,14 +14,20 @@ tbody > .table__row {
   }
 }
 
-.table__item {
-  text-align: center;
-  padding: 1rem;
-}
 
 .table {
   border-collapse: collapse;
   width: 100%;
+
+  &__item {
+    text-align: center;
+    padding: 1rem;
+  }
+
+  &__row {
+    margin-bottom: 1rem;
+    transition: all 0.5s ease;
+  }
 }
 
 @media (max-width: 56em) {
