feat: add components to storybook

--- a/src/index.scss
+++ b/src/index.scss
@@ -41,6 +41,8 @@ ul, ol, li {
 @import 'stories/button/back-button';
 @import 'stories/list/topCurrency';
 @import 'stories/table/currencyTable';
+@import 'stories/form/modalForm';
+@import 'stories/input/modalInput';
 @import 'stories/wallet/wallet';
 @import 'stories/pieChart/pieChart';
 @import 'components/header/header';
